--- a/side-and-navybar/style.css
+++ b/side-and-navybar/style.css
@@ -16,15 +16,19 @@ header {
     height: 8vh;
 }
 
-#right a{
-    text-align: center;
-    height: 50px;
-}
 
 #right {
     display: flex;
     justify-items: center;
     align-items:center;
+}
+
+.user  {
+    text-align: center;
+    margin: 0 15px 0 25px;
+    border-radius: 50%;
+    height: 50px;
+    width: 50px;
 }
 
 #left {
@@ -67,13 +71,6 @@ header {
     color: #5f6368;
 }
 
-
-#user {
-    margin: 0 15px 0 25px;
-    border-radius: 100%;
-    height: 50px;
-    width: 50px;
-}
 
 .sidebar {
     width: 50px;
